Get Kojo running with both Java 8 and Java 11.